package com.directi.training.dip.refactored;

public interface IReader {
    String read() throws Exception;
}
