package com.directi.training.dip.refactored;

public interface IWriter {
    void write(String data) throws Exception;
}
